# renderprotocol

./: .gitignore  README.md  STRUCTURE.md  agent.md  package.json  pnpm-lock.yaml  tsconfig.base.json  user.md
apps/host/: index.html  package.json  tsconfig.json  vite.config.ts
apps/host/src/: App.tsx  main.tsx
apps/host/src-tauri/: Cargo.toml  tauri.conf.json
apps/host/src-tauri/capabilities/: default.json
apps/host/src-tauri/src/: bus.rs  config_parser.rs  config_store.rs  config_watcher.rs  lib.rs  main.rs
apps/host/src-tauri/src/audit/: mod.rs  store.rs
apps/host/src-tauri/src/carrier/: keys.rs  lifecycle.rs  mod.rs  passthrough.rs  receipts.rs  registry.rs  routing.rs  scoring.rs  storage.rs  vouches.rs
apps/host/src-tauri/src/carrier/payments/: mod.rs  stripe_skeleton.rs  stub.rs
apps/host/src-tauri/src/commands/: audit.rs  bus.rs  config.rs  mcp.rs  mod.rs
apps/host/src-tauri/src/protocols/: README.md  mod.rs
apps/host/src-tauri/src/protocols/mcp/: client.rs  mod.rs  notifications.rs
apps/host/src/components/audit/: XRayDrawer.tsx
apps/host/src/components/conversation/: AgentPicker.tsx  Composer.tsx  ConversationPanel.tsx  MessageList.tsx
apps/host/src/components/render-field/: AttributionChip.tsx  ElementWrapper.tsx  RenderField.tsx
apps/host/src/compositions/: morning-brief.rules.ts
apps/host/src/lib/: active-composition.ts  audit.ts  composer-narrative.ts  composer.ts  config.ts  element-registry.ts  intent-router.ts  ipc.ts  mcp-app-bridge.ts  notifications.ts  query-client.ts  relative-time.ts  safe-markdown.tsx  surface-bus.ts  types.ts  use-brief.ts  use-composition.ts  use-config.ts  use-tools.ts
apps/host/src/styles/: index.css
apps/mock-mcp-server/: package.json
apps/mock-mcp-server/src/: agent-context.ts  index.ts
apps/mock-mcp-server/src/fixtures/: seed.json
apps/mock-mcp-server/src/simulator/: fleet-state.ts  state.ts
apps/mock-mcp-server/src/tools/: _shared.ts  calendar-get-today.ts  docs-get-recent.ts  get-alerts.ts  get-anomalies.ts  get-customer-reports.ts  get-drone-telemetry.ts  get-fleet-status.ts  get-recent-events.ts  get-weather-window.ts  list-items.ts  lookup.ts  mail-get-inbox.ts  messages-get-recent.ts  news-get-following.ts  record-action.ts  weather-get-local.ts  widget.ts
apps/mock-mcp-server/src/ui-resources/: hello.ts  widget.ts
config/: agent.md  hosting-agents.md  user.md
config/agents/: personal.md  primordia-ops.md
docs/: product_plan.md  render_surface_design_document.md  research_base_levels.md  research_payments_substrate.md  route_rank_plan.md  strategic_update (1).md  strategic_update.md
scripts/: dev.sh
(+15 files in other folders)
