[package]
name = "renderprotocol-host"
version = "0.0.0"
edition = "2021"
rust-version = "1.77"
publish = false

[lib]
name = "renderprotocol_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
notify = "6"
# Scoring substrate (RouteRank step 5a, see docs/route_rank_plan.md):
# rand + rand_distr give us Thompson sampling on Beta posteriors;
# tdigest gives us p50/p95 streaming-quantile latency tracking.
rand = "0.8"
rand_distr = "0.4"
tdigest = "0.2"
# Persistence + signing substrate (RouteRank step 5c).
# rusqlite (bundled SQLite) for receipts + vouches + agent keys.
# ed25519-dalek for receipt + vouch signing. async-stripe is intentionally
# absent — payments live behind a `PaymentBackend` trait with a stub
# default; real Stripe wiring is a follow-up PR (see route_rank_plan.md
# §6 deferrals).
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
